[package]
name = "zato_rate_limiting_core"
version = "4.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Token bucket rate limiting engine for Zato REST channels - API, ESB, SOA, iPaaS, integration platform, middleware, rule engine"
repository = "https://github.com/zatosource/zato"
readme = "README.md"
keywords = ["zato", "api", "integration-platform", "ipaas", "rule-engine"]
categories = ["development-tools"]

[lib]
name = "zato_rate_limiting_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
chrono = "0.4.44"
parking_lot = "0.12"
pyo3 = "0.28.3"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
overflow-checks = true
