[package]
name = "zato_scheduler_core"
version = "4.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Core scheduler utilities for Zato - API, ESB, SOA, iPaaS, integration platform, middleware, rule engine"
repository = "https://github.com/zatosource/zato"
readme = "README.md"
keywords = ["zato", "api", "integration-platform", "ipaas", "rule-engine"]
categories = ["development-tools"]

[lib]
name = "zato_scheduler_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.3" }
pyo3-log = "0.13.3"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
log = "0.4.29"
rand = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zato_server_core = { path = "../zato_server_core", version = "4.1.0" }

[dev-dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
proptest = "1.11.0"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
overflow-checks = true
