[package]
name = "zato_scheduler_core"
version = "4.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Core scheduler utilities for Zato - API, ESB, SOA, iPaaS, integration platform, middleware, rule engine"
repository = "https://github.com/zatosource/zato"
readme = "README.md"
keywords = ["zato", "api", "integration-platform", "ipaas", "rule-engine"]
categories = ["development-tools"]

[lib]
name = "zato_scheduler_core"
crate-type = ["rlib"]

[[bin]]
name = "_zato_scheduler"
path = "src/bin/scheduler.rs"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
humantime = "2.3.0"
parking_lot = "0.12"
prometheus = { version = "0.14.0", default-features = false }
rand = "0.10.1"
redis = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.11.0"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
overflow-checks = true
