[package]
name = "zato_sio"
version = "4.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "zato_sio"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
overflow-checks = true
