[package]
name = "zato_scheduler_core"
version = "4.1.0"
edition = "2021"

[lib]
name = "zato_scheduler_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.3" }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
log = "0.4.29"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zato_server_core = { path = "../../../zato-server/src/zato_server_core" }

[dev-dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
proptest = "1.11.0"
