[package]
name = "zato_server_core"
version = "4.1.0"
edition = "2021"

[lib]
name = "zato_server_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
httparse = "1.9"
bytes = "1"

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
libc = "0.2"
