[package]
name = "zato_server_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "zato_server_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.3" }
httparse = "1"
libc = "0.2.184"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.44"
rand = "0.10.0"
serde_json = "1"
