[package]
name = "zato_server_core"
version = "4.1.0"
edition = "2021"

[lib]
name = "zato_server_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.3" }
http = "1.4.0"
httparse = "1"
libc = "0.2.184"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.44"
rand = "0.10.0"
serde_json = "1"

[dev-dependencies]
proptest = "1.11.0"
